--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "http-server"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/toxtli/pictogram/issues"
   },
-  "homepage": "https://github.com/toxtli/pictogram#readme"
+  "homepage": "https://github.com/toxtli/pictogram#readme",
+  "dependencies": {
+    "http-server": "^0.12.3"
+  }
 }
